// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches shallow shapshot 1`] = `
<div
  className="src-shared-components-SortingSelectBar-___style__sortingBar___3esqf"
>
  <h2
    className="src-shared-components-SortingSelectBar-___style__title___36eG5"
  >
    title
  </h2>
  <div
    className="src-shared-components-SortingSelectBar-___style__view-options-toggle-container___1N4rY"
  >
    <Select
      arrowRenderer={[Function]}
      clearable={false}
      onChange={[Function]}
      options={
        Array [
          Object {
            "label": "label",
            "value": "value",
          },
        ]
      }
      placeholder="Select an option"
      searchable={false}
      selectRef={[Function]}
      value={null}
    />
  </div>
</div>
`;

exports[`Matches shallow shapshot 2`] = `
<div
  className="src-shared-components-SortingSelectBar-___style__sortingBar___3esqf"
>
  <h2
    className="src-shared-components-SortingSelectBar-___style__title___36eG5"
  >
    title
  </h2>
</div>
`;
